--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.8.0",
+    "@types/express": "^4.17.21",
+    "@types/node": "^22.0.0",
+    "dotenv": "^16.4.5",
     "eslint": "9.x",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.35.0",
@@ -21,5 +24,8 @@
     "tsc": "^2.0.4",
     "typescript": "^5.5.4",
     "typescript-eslint": "^7.18.0"
+  },
+  "dependencies": {
+    "express": "^4.19.2"
   }
 }
