--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typescript-eslint": "^7.18.0"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mongodb": "^6.8.0"
   }
 }
